# binance-paired-opener

./: .gitignore  DEVELOPMENT_LOG_2026-04-21.md  PROJECT_DEVELOPMENT_PLAN.md  README.md  SERVICE_LAUNCH_GUIDE.md  TEST_REPORT_2026-03-29.md  git-remote.json  pyproject.toml  关闭自动开单服务.bat  启动自动开单服务.bat  运行回归测试.bat  重启自动开单服务.bat
app_i18n/: __init__.py  runtime.py
binance-account-monitor/: README.md  pyproject.toml
binance-account-monitor/config/: binance_monitor_accounts.example.json
binance-account-monitor/monitor_app/: account_monitor.py  api.py  binance.py  config.py  main.py
binance-account-monitor/monitor_app/static/: monitor.html
binance-account-monitor/scripts/: restart_monitor_service.bat  restart_monitor_service.ps1
binance-account-monitor/tests/: test_account_monitor.py  test_binance_gateway.py  test_config.py
config/: binance_accounts.example.json  binance_api.env  symbol_whitelist.json
i18n/messages/: zh-CN.json
i18n/registry/: events.json  logs.json  precheck.json  (+1 more)
paired_opener/: __init__.py  account_monitor.py  account_runtime.py  api.py  binance.py  classified_gateway.py  cli.py  config.py  domain.py  engine.py  errors.py  exchange.py  execution_policy.py  log_retention.py  main.py  market_stream.py  monitor_api.py  monitor_main.py  rounding.py  schemas.py  service.py  storage.py
scripts/: restart_monitor_service.bat  restart_monitor_service.ps1  restart_service.bat  restart_service.ps1  run_pytest_target.py  run_regression_tests.ps1  run_service.py  run_service_console.ps1  start_service.ps1  stop_service.ps1
tests/: test_account_monitor.py  test_accounts.py  test_app_error_contracts.mjs  test_app_residual_display.mjs  test_binance_gateway.py  test_classified_gateway.py  test_engine.py  test_i18n_contracts.py  test_log_retention.py  test_market_stream.py  test_monitor_message_contracts.mjs  test_service_config.py  test_service_scripts.py
(+3 files in other folders)
