[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-account-monitor"
version = "0.1.0"
description = "Independent Binance unified account monitor service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "uvicorn>=0.32,<1.0",
  "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[project.scripts]
binance-account-monitor = "monitor_app.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["monitor_app*"]

[tool.setuptools.package-data]
monitor_app = ["static/*.html"]